--- a/shunfeng/src/html/cart.html
+++ b/shunfeng/src/html/cart.html
@@ -22,7 +22,7 @@
         <div class="wrapper">
             <div class="header-top-left left">
                 <div class="address">
-                    <span>冷链配送 顺丰到家 送至：</span>
+                    <span>冷链配送 顺丰到家 送至：啦啦</span>
                     <b>北京<i></i></b>
                 </div>
                 
